--- a/src/app/pages/main-loser/page-invalid/page-invalid.component.html
+++ b/src/app/pages/main-loser/page-invalid/page-invalid.component.html
@@ -2,7 +2,8 @@
     <div class="titulos">
         <h3>BIENVENIDOS A GRUPO VIRTUAL</h3>
         <h1>Pepito grillo</h1>
-        <button (click)="navegar()">Iniciar Sesion</button>
+        <button mat-raised-button color="primary" (click)="popupLogin()">Iniciar Sesión</button>
+          
     </div>
     <img src="../../../../assets/doctora.jpg" alt="imágen doctora">
 </div>
