--- a/src/app/components/popup-login/popup-login.component.html
+++ b/src/app/components/popup-login/popup-login.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-tab-group>
+<mat-tab-group>
     <mat-tab label="Iniciar Sesión">
       <form>
         <mat-form-field class="full-width">
@@ -9,7 +9,7 @@
           <mat-label>Contraseña</mat-label>
           <input matInput type="password" placeholder="Contraseña">
         </mat-form-field>
-        <button mat-raised-button color="primary">Iniciar Sesión</button>
+        <button mat-raised-button color="primary" (click)="home2()">Iniciar Sesión</button>
       </form>
     </mat-tab>
     <mat-tab label="Registrarse">
@@ -29,5 +29,4 @@
         <button mat-raised-button color="accent">Registrarse</button>
       </form>
     </mat-tab>
-  </mat-tab-group> -->
-<h1>zdf</h1>
+  </mat-tab-group>
