--- a/src/app/components/form-login/form-login.component.html
+++ b/src/app/components/form-login/form-login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div>
       <label for="email">Email:</label>
       <input id="email" type="email" formControlName="email" />
@@ -19,4 +19,4 @@
   
     <button type="submit" [disabled]="loginForm.invalid">Iniciar sesión</button>
   </form>
-  
+   -->
