--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-page-invalid></app-page-invalid> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-prueba></app-prueba>
